--- a/_views/surveys.handlebars
+++ b/_views/surveys.handlebars
@@ -1,55 +1,36 @@
 <main class="content-wrapper">
-    <h1 class="section-title">Surveys</h1>
-    <ul class="cards-list w-list-unstyled">
-      <li class="project-card">
-        <a class="card-link w-inline-block" href="/surveyspage">
-          <div class="survey-detail">
-            <div class="project-card-title">Bat survey Camperdown</div>
-            <div class="survey-comms">This population was discovered in the 21st blabla...&#xA0;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
-            <div class="project-card-footer">
-              <div class="project-card-dates">01/02/2016 &#x279E; 15/02/2016</div>
-              <div class="project-card-id"><span class="number-sign">#</span>201923</div>
+    <div class="content">
+      <h1 class="section-title">Surveys</h1>
+      <ul class="cards-list w-list-unstyled">
+      {{#each survey}}
+        <li>
+          <a class="survey w-inline-block" href="/survey/{{this.surveyId}}/species">
+            <div class="survey-detail">
+              <div class="project-card-title">{{this.surveyNme}}</div>
+              <div class="survey-comms">{{this.surveyComm}}</div>
+              <div class="project-card-footer">
+                <div class="project-card-dates">{{this.surveyStart}} &#x279E; {{this.surveyEnd}}</div>
+                <div class="project-card-id"><span class="number-sign">#</span>{{this.surveyId}}</div>
+              </div>
             </div>
-          </div>
-          <div class="survey-site">
-            <div class="card-title">Locality</div>
-            <div class="project-card-title">Site name...</div>
-            <p>From the Hamilton Hwy travel north up Common Rd...</p>
-            <div class="gps-location">
-              <div>Lat : 144.0447</div>
-              <div>Long: 144.0447</div>
+            <div class="survey-site">
+              <div class="card-title">Locality</div>
+              <div class="project-card-title">{{this.siteName}}</div>
+              <p class="card-desc">{{this.siteDesc}}</p>
+              <div class="gps-location">
+                <div>Lat : {{this.lat}}</div>
+                <div>Lat : {{this.long}}</div>
+              </div>
+              <div class="project-card-footer">
+                <div class="project-card-dates">Accuracy : {{this.accu}}m</div>
+                <div class="card-id">
+                  <div>site ID <span class="number-sign">#</span>{{this.siteId}}</div>
+                </div>
+              </div>
             </div>
-            <div class="project-card-footer">
-              <div class="project-card-dates">Accuracy : 50m</div>
-              <div class="project-card-id"><span class="number-sign">#</span>1214</div>
-            </div>
-          </div>
-        </a>
-      </li>
-      <li class="project-card">
-        <a class="card-link w-inline-block" href="/surveyspage">
-          <div class="survey-detail">
-            <div class="project-card-title">{{this.surveyNme}}</div>
-            <div class="survey-comms">{{this.surveyComm}}</div>
-            <div class="project-card-footer">
-              <div class="project-card-dates">{{this.surveyStart}} &#x279E; {{this.surveyEnd}}</div>
-              <div class="project-card-id"><span class="number-sign">#</span>{{this.surveyId}}</div>
-            </div>
-          </div>
-          <div class="survey-site">
-            <div class="card-title">Locality</div>
-            <div class="project-card-title">{{this.siteName}}</div>
-            <p>{{this.siteDesc}}</p>
-            <div class="gps-location">
-              <div>Lat : {{this.lat}}</div>
-              <div>Lat : {{this.long}}</div>
-            </div>
-            <div class="project-card-footer">
-              <div class="project-card-dates">Accuracy : {{this.accu}}m</div>
-              <div class="project-card-id"><span class="number-sign">#</span>{{this.siteId}}</div>
-            </div>
-          </div>
-        </a>
-      </li>
-    </ul>
+          </a>
+        </li>
+      {{/each}}
+      </ul>
+    </div>
   </main>
