--- a/views/species.handlebars
+++ b/views/species.handlebars
@@ -1,8 +1,8 @@
 <main class="content-wrapper">
     <div class="content">
       <h1 class="section-title">Species list</h1>
-      <a class="card-link w-inline-block" href="#">
-        <div class="survey-detail">
+      <a class="card-link method-card w-inline-block" href="#">
+        <div>
           <div class="row">
             <div>Method :</div>
             <div class="response">{{method.name}}</div>
@@ -29,33 +29,50 @@
           </div>
           <div class="project-card-footer">
             {{#if method.dateDisplay}}
-            <div class="project-card-dates">{{method.start}} &#x279E; {{method.end}}</div>
+            <div class="project-card-dates">{{this.method.start}} &#x279E; {{this.method.end}}</div>
             {{/if}}
             <div class="project-card-id"><span class="number-sign">#</span>{{method.id}}</div>
           </div>
         </div>
       </a>
-      <a class="add-species-button w-button" href="/survey/{{survey.id}}/method/{{method.id}}/taxonRecord">add Taxon</a>
-      <ul class="cards-list w-list-unstyled">
-        {{#each taxon}}
-        <li class="project-card">
-          <a class="card-link w-inline-block" href="#">
-            <div class="taxon">
-              <div class="taxon-names">
-              {{#if this.commonNme}}
-                {{this.commonNme}}<br>
-              {{/if}}  
-                {{this.scientificNme}}</div>
-              <div class="project-card-footer">
-              {{#if this.totalCountInt}}
-                <div class="taxon-count">Count : {{this.totalCountInt}}</div>
-              {{/if}}
+      <div class="w-form">
+        <form action="/survey/:id/species" method="post" data-name="Email Form" id="email-form" name="email-form">
+          <div class="actions-bar">
+            <a class="add-species-button w-button" href="/survey/{{survey.id}}/method/{{method.id}}/taxonRecord">add Taxon</a>
+            <input class="delete-button w-button" data-wait="Please wait..." type="submit" value="delete">
+          </div>
+          <ul class="cards-list w-list-unstyled">
+          {{#each taxon}}
+            <li class="card">
+              <a class="card-inner-link w-inline-block" href="#">
+                <div>
+                  <div>
+                  {{#if this.commonNme}}
+                    {{this.commonNme}}<br>
+                  {{/if}}
+                    {{this.commonName}}</div>
+                  <div>{{this.scientificNme}}</div>
+                  {{#if this.totalCountInt}}
+                  <div class="taxon-count">Count : {{this.totalCountInt}}</div>
+                  {{/if}}
+                </div>
+              </a>
+              <div class="card-edit">
                 <div class="taxon-id"><span class="number-sign">#</span>{{this.taxonId}}</div>
+                <div class="w-checkbox w-clearfix">
+                  <input class="w-checkbox-input" data-name="taxonId" id="{{this.taxonId}}" name="{{this.taxonId}}" type="checkbox">
+                </div>
               </div>
-            </div>
-          </a>
-        </li>
-        {{/each}}
-      </ul>
+            </li>
+            {{/each}}
+          </ul>
+        </form>
+        <div class="w-form-done">
+          <div>Thank you! Your submission has been received!</div>
+        </div>
+        <div class="w-form-fail">
+          <div>Oops! Something went wrong while submitting the form</div>
+        </div>
+      </div>
     </div>
   </main>
