--- a/views/surveys.handlebars
+++ b/views/surveys.handlebars
@@ -1,32 +1,36 @@
 <main class="content-wrapper">
-    <h1 class="section-title">Surveys</h1>
-    <ul class="cards-list w-list-unstyled">
-    {{#each survey}}
-      <li class="project-card">
-        <a class="card-link w-inline-block" href="/survey/{{this.surveyId}}/species">
-          <div class="survey-detail">
-            <div class="project-card-title">{{this.surveyNme}}</div>
-            <div class="survey-comms">{{this.surveyComm}}</div>
-            <div class="project-card-footer">
-              <div class="project-card-dates">{{this.surveyStart}} &#x279E; {{this.surveyEnd}}</div>
-              <div class="project-card-id"><span class="number-sign">#</span>{{this.surveyId}}</div>
+    <div class="content">
+      <h1 class="section-title">Surveys</h1>
+      <ul class="cards-list w-list-unstyled">
+      {{#each survey}}
+        <li>
+          <a class="survey w-inline-block" href="/survey/{{this.surveyId}}/species">
+            <div class="survey-detail">
+              <div class="project-card-title">{{this.surveyNme}}</div>
+              <div class="survey-comms">{{this.surveyComm}}</div>
+              <div class="project-card-footer">
+                <div class="project-card-dates">{{this.surveyStart}} &#x279E; {{this.surveyEnd}}</div>
+                <div class="project-card-id"><span class="number-sign">#</span>{{this.surveyId}}</div>
+              </div>
             </div>
-          </div>
-          <div class="survey-site">
-            <div class="card-title">Locality</div>
-            <div class="project-card-title">{{this.siteName}}</div>
-            <p>{{this.siteDesc}}</p>
-            <div class="gps-location">
-              <div>Lat : {{this.lat}}</div>
-              <div>Lat : {{this.long}}</div>
+            <div class="survey-site">
+              <div class="card-title">Locality</div>
+              <div class="project-card-title">{{this.siteName}}</div>
+              <p class="card-desc">{{this.siteDesc}}</p>
+              <div class="gps-location">
+                <div>Lat : {{this.lat}}</div>
+                <div>Lat : {{this.long}}</div>
+              </div>
+              <div class="project-card-footer">
+                <div class="project-card-dates">Accuracy : {{this.accu}}m</div>
+                <div class="card-id">
+                  <div>site ID <span class="number-sign">#</span>{{this.siteId}}</div>
+                </div>
+              </div>
             </div>
-            <div class="project-card-footer">
-              <div class="project-card-dates">Accuracy : {{this.accu}}m</div>
-              <div class="project-card-id"><span class="number-sign">#</span>{{this.siteId}}</div>
-            </div>
-          </div>
-        </a>
-      </li>
-    {{/each}}
-    </ul>
+          </a>
+        </li>
+      {{/each}}
+      </ul>
+    </div>
   </main>
