--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -1,17 +1,19 @@
 <main class="content-wrapper">
-    <h1 class="section-title">Projects list</h1>
-    <ul class="cards-list w-list-unstyled">
-    {{#each project}}
-      <li class="project-card">
-        <a class="card-link w-inline-block" href="/project/{{this.id}}/surveys">
-          <div class="project-card-title">{{this.title}}</div>
-          <p class="project-card-desc">{{this.desc}}</p>
-          <div class="project-card-footer">
-            <div class="project-card-dates">{{this.start}}&#xA0;&#x279E; {{this.end}}</div>
-            <div class="project-card-id"><span class="number-sign">#</span>{{this.id}}</div>
-          </div>
-        </a>
-      </li>
-    {{/each}}
-    </ul>
+    <div class="content">
+      <h1 class="section-title">Projects list</h1>
+      <ul class="cards-list w-list-unstyled">
+      {{#each project}}
+        <li class="project-card">
+          <a class="card-link w-inline-block" href="/project/{{this.id}}/surveys">
+            <div class="project-card-title">{{this.title}}</div>
+            <p class="project-card-desc">{{this.desc}}</p>
+            <div class="project-card-footer">
+              <div class="project-card-dates">{{this.start}}&#xA0;&#x279E; {{this.end}}</div>
+              <div class="project-card-id"><span class="number-sign">#</span>{{this.id}}</div>
+            </div>
+          </a>
+        </li>
+      {{/each}}
+      </ul>
+    </div>
   </main>
