fixed typo in survey templates

--- a/views/surveys.handlebars
+++ b/views/surveys.handlebars
@@ -19,7 +19,7 @@
               <p class="card-desc">{{this.siteDesc}}</p>
               <div class="gps-location">
                 <div>Lat : {{this.lat}}</div>
-                <div>Lat : {{this.long}}</div>
+                <div>Long : {{this.long}}</div>
               </div>
               <div class="project-card-footer">
                 <div class="project-card-dates">Accuracy : {{this.accu}}m</div>
