--- a/views/css/vbamobile.css
+++ b/views/css/vbamobile.css
@@ -384,9 +384,9 @@ body {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-flex-basis: 25%;
-  -ms-flex-preferred-size: 25%;
-  flex-basis: 25%;
+  /*-webkit-flex-basis: 25%;*/
+  /*-ms-flex-preferred-size: 25%;*/
+  /*flex-basis: 25%;*/
   border-radius: 5px;
   background-color: rgba(32, 21, 71, .8);
 }
