--- a/views/newTaxonRecord.handlebars
+++ b/views/newTaxonRecord.handlebars
@@ -4,7 +4,7 @@
         <div class="form-inner-container">
           <h1 class="form-header">Add taxon</h1>
           <label for="name">Taxon :</label>
-          <input class="w-input" data-name="taxonId" id="taxonId" maxlength="256" name="taxonId" placeholder="Taxon Id" type="text">
+          <input class="w-input" data-name="taxonId" id="taxonId" maxlength="256" name="taxonId" placeholder="Search for taxon" type="text">
           <label for="count">Count :</label>
           <input class="w-input" data-name="Count" id="count" input="number" maxlength="256" name="count" placeholder="Total count" required="required" type="number">
           <label for="Type-of-record">Type of record :</label>
