--- a/views_8/newsurvey.handlebars
+++ b/views_8/newsurvey.handlebars
@@ -31,7 +31,7 @@
         </div>
         <div class="form-button-center">
           <input class="form-button w-button" data-wait="Please wait..." type="submit" value="save">
-          <a class="form-button w-button" href="species.html">add species</a>
+          <a class="form-button w-button" href="/species">add species</a>
         </div>
       </form>
       <div class="w-form-done">
