--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,9 @@
 <main class="content-wrapper">
-    <div class="button-container">
-      <!-- <a class="project-button w-button" href="/project">+&#xA0;New Project</a> -->
-      <a class="project-button w-button" href="/projects">View my Project</a>
+    <div class="landing-page-buttons">
+      <a class="add-observations landing-page-button w-button" href="/incidentalObs">Incidental Observation<br>&#x1F50E;&#x1F40D;</a>
+      <div class="bottom-buttons">
+        <a class="landing-page-button search-vba w-button" href="#">Search Vba</a>
+        <a class="landing-page-button my-observations w-button" href="/projects">My observations</a>
+      </div>
     </div>
   </main>
