incendital Observation front end working with autocomplete

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <main class="content-wrapper">
     <div class="landing-page-buttons">
-      <a class="add-observations landing-page-button w-button" href="/incidentalObs">Incidental Observation<br>&#x1F50E;&#x1F40D;</a>
+      <a class="add-observations landing-page-button w-button" href="/incobs">Incidental Observation<br>&#x1F50E;&#x1F40D;</a>
       <div class="bottom-buttons">
         <a class="landing-page-button search-vba w-button" href="#">Search Vba</a>
         <a class="landing-page-button my-observations w-button" href="/projects">My observations</a>
