--- a/views/newGeneralObs.handlebars
+++ b/views/newGeneralObs.handlebars
@@ -1,42 +1,10 @@
-<!DOCTYPE html>
-<!--  Last Published: Fri Dec 02 2016 22:11:30 GMT+0000 (UTC)  -->
-<html data-wf-page="583d3f31c76cd8ef7589150b" data-wf-site="57ced8c91d3807cb6dad5f35">
-<head>
-  <meta charset="utf-8">
-  <title>new general obs</title>
-  <meta content="new general obs" property="og:title">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/components.css" rel="stylesheet" type="text/css">
-  <link href="css/vbamobile.css" rel="stylesheet" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
-  <script type="text/javascript">
-    WebFont.load({
-      google: {
-        families: ["Roboto:regular,500,700"]
-      }
-    });
-  </script>
-  <script src="js/modernizr.js" type="text/javascript"></script>
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/awesomplete/1.1.1/awesomplete.min.css" rel="stylesheet" type="text/css">
-</head>
-<body class="body">
-  <header class="header">
-    <div class="titles">
-      <h1 class="title">VBA</h1>
-      <h2 class="sub-title">mobile</h2>
-    </div>
-    <a class="username" href="#">username</a>
-  </header>
-  <main class="content-wrapper">
+<main class="content-wrapper">
     <div class="form w-form">
-      <form action="/survey/:id/species" class="survey-form" data-name="add taxon" data-redirect="/survey/:id/species" id="wf-form-add-taxon" method="post" name="wf-form-add-taxon" redirect="/survey/:id/species">
+      <form action="/incobs" class="survey-form" data-name="add taxon" data-redirect="/incobs" id="wf-form-add-taxon" method="post" name="wf-form-add-taxon">
         <div class="form-inner-container">
           <h1 class="form-header">Add observation</h1>
           <label for="name">Species :</label>
-          <input class="w-input" data-name="Name" id="name" maxlength="256" name="Name" placeholder="Search for species" type="text">
+          <input class="w-input" data-name="Name" id="taxonId" maxlength="256" name="Name" placeholder="Search for species" type="text">
           <label for="Site-ID">Count :</label>
           <input class="w-input" data-name="Site ID" id="Site-ID" input="number" maxlength="256" name="Site-ID" placeholder="Total count" required="required" type="text">
           <label for="Type-of-record">Type of record :</label>
@@ -75,17 +43,17 @@
           </select>
           <label>Location :</label>
           <div class="gps-button">
-            <a class="buttons-size w-button" href="#">🎯 &nbsp;Get location</a>
+            <a class="buttons-size w-button" href="#">&#x1F3AF; &#xA0;Get location</a>
             <a class="buttons-size manual-location w-button" href="#">Enter location</a>
           </div>
           <label>Time :</label>
           <div class="time-buttons">
-            <a class="buttons-size w-button" href="#">⏰ &nbsp;Now</a>
+            <a class="buttons-size w-button" href="#">&#x23F0; &#xA0;Now</a>
             <a class="buttons-size manual-time w-button" href="#">Enter time</a>
           </div>
           <div class="form-button-center">
             <input class="form-button w-button" data-wait="Please wait..." type="submit" value="save">
-            <input class="form-button incomplete-form w-button" data-wait="Please wait..." type="submit" value="complete form">
+          <!--   <input class="form-button incomplete-form w-button" data-wait="Please wait..." type="submit" value="complete form"> -->
           </div>
         </div>
       </form>
@@ -97,29 +65,3 @@
       </div>
     </div>
   </main>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-  <script src="js/vbamobile.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/awesomplete/1.1.1/awesomplete.min.js"></script>
-  <script>
-    var ajax = new XMLHttpRequest();
-    	var input = document.getElementById("name");
-    	var awesomplete = new Awesomplete(input, {
-    			  minChars: 1,
-    			});
-    	input.addEventListener('keyup', function() {
-    		console.log(event) 
-    		if ((event.keyCode >= 46) && (event.keyCode <= 90)) {
-    		console.log(event.keyCode)
-    		ajax.open("GET", "http://54.206.104.145:8080/species?COMMON_NAME="+ input.value, true);
-    		ajax.onload = function() {
-    			var list = JSON.parse(ajax.responseText).map(function(i) { return [i.COMMON_NAME, i.TAXON_ID]; });
-    			console.log(list)
-    			awesomplete.list = list;
-    		};
-    		ajax.send();
-    	}
-    	});
-  </script>
-</body>
-</html>
