--- a/views/newTaxonRecord.handlebars
+++ b/views/newTaxonRecord.handlebars
@@ -4,7 +4,7 @@
         <div class="form-inner-container">
           <h1 class="form-header">Add observation</h1>
           <label for="name">Species :</label>
-          <input class="w-input" data-name="Name" id="name" maxlength="256" name="Name" placeholder="Search for species" type="text">
+          <input class="w-input" data-name="Name" id="taxonId" maxlength="256" name="Name" placeholder="Search for species" type="text">
           <label for="Site-ID">Count :</label>
           <input class="w-input" data-name="Site ID" id="Site-ID" input="number" maxlength="256" name="Site-ID" placeholder="Total count" required="required" type="text">
           <label for="Type-of-record">Type of record :</label>
@@ -41,19 +41,12 @@
             <option value="Sub fossil">Sub fossil</option>
             <option value="Voucher specimen">Voucher specimen</option>
           </select>
-          <label>Location :</label>
-          <div class="gps-button">
-            <a class="buttons-size w-button" href="#">&#x1F3AF; &#xA0;Get location</a>
-            <a class="buttons-size manual-location w-button" href="#">Enter location</a>
-          </div>
-          <label>Time :</label>
-          <div class="time-buttons">
-            <a class="buttons-size w-button" href="#">&#x23F0; &#xA0;Now</a>
-            <a class="buttons-size manual-time w-button" href="#">Enter time</a>
-          </div>
+          <label for="Observer">Observer :</label>
+          <select class="fiel w-select" data-name="Observer" id="Observer" name="Observer">
+            <option value="Myself">Myself</option>
+          </select>
           <div class="form-button-center">
             <input class="form-button w-button" data-wait="Please wait..." type="submit" value="save">
-            <input class="form-button incomplete-form w-button" data-wait="Please wait..." type="submit" value="complete form">
           </div>
         </div>
       </form>
