get location and time script

--- a/views/newGeneralObs.handlebars
+++ b/views/newGeneralObs.handlebars
@@ -41,14 +41,14 @@
             <option value="Sub fossil">Sub fossil</option>
             <option value="Voucher specimen">Voucher specimen</option>
           </select>
-          <label>Location :</label>
+          <label id="locationLabel">Location :</label>
           <div class="gps-button">
-            <a class="buttons-size w-button" href="#">&#x1F3AF; &#xA0;Get location</a>
+            <a class="buttons-size w-button" href="#" id="getLocation" >&#x1F3AF; &#xA0;Get location</a>
             <a class="buttons-size manual-location w-button" href="#">Enter location</a>
           </div>
-          <label>Time :</label>
+          <label id="timeLabel">Time :</label>
           <div class="time-buttons">
-            <a class="buttons-size w-button" href="#">&#x23F0; &#xA0;Now</a>
+            <a id="time-button" class="buttons-size w-button" href="#">&#x23F0; &#xA0;Now</a>
             <a class="buttons-size manual-time w-button" href="#">Enter time</a>
           </div>
           <div class="form-button-center">
