--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,6 +62,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/awesomplete/1.1.1/awesomplete.min.js"></script>
   <script src="/js/awesomplete-taxon.js" type="text/javascript"></script>
   {{/if}}
+  
+  {{#if incObs}}
+  <script src="/js/incObs.js" type="text/javascript"></script>
+  {{/if}}
 
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
