fixed homepage layout

--- a/views/species.handlebars
+++ b/views/species.handlebars
@@ -38,7 +38,7 @@
       <div class="w-form">
         <form action="/survey/{{survey.id}}/method/{{method.id}}/species/destroy" method="post" data-name="Taxon id" id="taxonSelect" name="select taxon">
           <div class="actions-bar">
-            <a class="add-species-button w-button" href="/survey/{{survey.id}}/method/{{method.id}}/taxonRecord">add Taxon</a>
+            <a class="add-species-button w-button" href="/survey/{{survey.id}}/method/{{method.id}}/taxonRecord">add Observation</a>
             <input class="delete-button w-button" data-wait="Please wait..." type="submit" value="Delete">
           </div>
           <ul class="cards-list w-list-unstyled">
