--- a/views/css/vbamobile.css
+++ b/views/css/vbamobile.css
@@ -773,13 +773,18 @@ body {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-justify-content: space-around;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
   -webkit-box-align: stretch;
   -webkit-align-items: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 .add-observations {
@@ -801,7 +806,13 @@ body {
 
 .add-observations.landing-page-button {
   width: 100%;
-  height: 12rem;
+  height: 8rem;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background-image: none;
   box-shadow: 1px 1px 8px 0 #000;
   font-size: 2em;
