fixed bug in add taxon obs page

--- a/oldViews/views_8/newTaxonRecord.handlebars
+++ b/oldViews/views_8/newTaxonRecord.handlebars
@@ -2,9 +2,9 @@
     <div class="form w-form">
       <form action="/survey/{{survey.id}}/method/{{method.id}}/taxonRecord" class="survey-form" data-name="Taxon"  id="email-form" method="post" name="email-form" redirect="/survey/:id/species">
         <div class="form-inner-container">
-          <h1 class="form-header">Add taxon</h1>
+          <h1 class="form-header">Add observation</h1>
           <label for="name">Taxon :</label>
-          <input class="w-input" data-name="taxonId" id="taxonId" maxlength="256" name="taxonId" placeholder="Search for taxon" type="text">
+          <input class="w-input" data-name="taxonId" id="taxonId" maxlength="256" name="taxonId" placeholder="Search for species" type="text">
           <label for="count">Count :</label>
           <input class="w-input" data-name="Count" id="count" input="number" maxlength="256" name="count" placeholder="Total count" required="required" type="number">
           <label for="Type-of-record">Type of record :</label>
