show and tell update

--- a/views/newGeneralObs.handlebars
+++ b/views/newGeneralObs.handlebars
@@ -42,9 +42,13 @@
             <option value="Voucher specimen">Voucher specimen</option>
           </select>
           <label id="locationLabel">Location :</label>
+          <label for="name">Latitude :</label>
+            <input class="w-input" data-name="Latitude" id="lat" maxlength="256" name="Latitude" placeholder="37.8100" type="text">
+          <label for="name">Longitude :</label>
+            <input class="w-input" data-name="Longitude" id="long" maxlength="256" name="Longitude" placeholder="144.1234" type="text">
           <div class="gps-button">
             <a class="buttons-size w-button" href="#" id="getLocation" >&#x1F3AF; &#xA0;Get location</a>
-            <a class="buttons-size manual-location w-button" href="#">Enter location</a>
+            <!-- <a class="buttons-size manual-location w-button" href="#">Enter location</a> -->
           </div>
           <label id="timeLabel">Time :</label>
           <div class="time-buttons">
