Species name is now displayed when filling up autocomplete form

--- a/views/newGeneralObs.handlebars
+++ b/views/newGeneralObs.handlebars
@@ -4,7 +4,8 @@
         <div class="form-inner-container">
           <h1 class="form-header">Add observation</h1>
           <label for="name">Species :</label>
-          <input class="w-input" data-name="taxonId" id="taxonId" maxlength="256" name="taxonId" placeholder="Search for species" type="text">
+          <input class="w-input" data-name="taxonName" id="taxonName" maxlength="256" name="taxonName" placeholder="Search for species" type="text">
+          <input class="w-input" data-name="taxonId" id="taxonId" maxlength="256" name="taxonId" placeholder="Search for species" type="hidden">
           <label for="Site-ID">Count :</label>
           <input class="w-input" data-name="count" id="count" input="number" maxlength="256" name="count" placeholder="Total count" required="required" type="text">
           <label for="Type-of-record">Type of record :</label>
