Gps accuracy is now send to vba on incendital observation

--- a/views/newGeneralObs.handlebars
+++ b/views/newGeneralObs.handlebars
@@ -51,6 +51,7 @@
             <input class="w-input" data-name="Latitude" id="lat" maxlength="256" name="lat" placeholder="37.8100" type="text">
           <label for="name">Longitude :</label>
             <input class="w-input" data-name="Longitude" id="long" maxlength="256" name="long" placeholder="144.1234" type="text">
+            <input class="w-input" data-name="Accuracy" id="accu" maxlength="256" name="accu" type="hidden">
           <div class="gps-button">
             <a class="buttons-size w-button" href="#" id="getLocation" >&#x1F3AF; &#xA0;Get location</a>
             <!-- <a class="buttons-size manual-location w-button" href="#">Enter location</a> -->
